# vkedu-c-cpp-hw2

./: .gitignore  CMakeLists.txt  README.md  numbers.c
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  benchmark.c
num_lib/: CMakeLists.txt
num_lib/common/: CMakeLists.txt  num_manip_common.c  num_utils_common.c
num_lib/common/inc/: num_manip.h  num_utils.h
num_lib/inc/: num_manip.h  num_utils.h
num_lib/shared/: CMakeLists.txt  num_manip_shared.c  num_utils_shared.c
num_lib/src/: num_manip.c  num_utils.c
num_lib/static/: CMakeLists.txt  num_manip_static.c  num_utils_static.c
tests/: CMakeLists.txt  num_tests.cpp  test_shared.cpp  test_static.cpp
vectors/: generate.py
