cmake_minimum_required(VERSION 3.0.0)
project(num_lib)

add_subdirectory(common)
add_subdirectory(shared)
add_subdirectory(static)

set(NUM_LIB_LIBRARIES_COMMON ${NUM_LIB_LIBRARIES_COMMON} PARENT_SCOPE)
set(NUM_LIB_COMMON_INCLUDE_DIRS ${NUM_LIB_COMMON_INCLUDE_DIRS} PARENT_SCOPE)

set(NUM_LIB_LIBRARIES_SHARED ${NUM_LIB_LIBRARIES_SHARED} PARENT_SCOPE)
set(NUM_LIB_SHARED_INCLUDE_DIRS ${NUM_LIB_SHARED_INCLUDE_DIRS} PARENT_SCOPE)

set(NUM_LIB_LIBRARIES_STATIC ${NUM_LIB_LIBRARIES_STATIC} PARENT_SCOPE)
set(NUM_LIB_STATIC_INCLUDE_DIRS ${NUM_LIB_STATIC_INCLUDE_DIRS} PARENT_SCOPE)
